# moritz_pull_data

./: .gitignore  README.md  main.py  pyproject.toml
src/: excel.py  graphs.py  scrapers.py
