[project]
name = "moritz-pull-data"
version = "0.1.0"
description = "Scrapes current prices for Latex (LGM), Cotton (Onvista), Nitrile/Butadiene (100ppi) and saves to Excel"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "cloudscraper>=1.2.71",
    "easyvisualize",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
easyvisualize = { url = "https://github.com/LucaStengel/EasyPlot/archive/refs/heads/main.tar.gz" }
